# ocr-guia

./: .gitignore  build-runner.bat  build.bat  build7.bat  main.py  ocr-guia.py  ocr-mes.py  pngtob64.py  pyproject.toml  pyproject7.toml  requirements.txt  runner.py
